# Dymova-english

./: .gitignore  AUDIT_OBSHIY.md  AUDIT_SPEED_MOBILE.md  DEVLOG.md  Makefile  PLAN_RAZVITIYA_FOXINBURG.md  PROMPT_FOXINBURG.md  SEO_meta_recommendations.md  SEO_semantic_core.md  YANDEX_BUSINESS_PLAN.md  feed_education.xml  feed_vacancies.xml  jest.config.js  package-lock.json  package.json  pytest.ini  test-report.md
bot/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  TELEGRAM_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local_test.py  test-plan.md  test-report.md
bot/app/: admin_router.py  ai_core.py  bigben.py  broadcast.py  config.py  conv_report.py  convlog.py  course_selector.py  dedup.py  group_chat.py  insights.py  intent.py  lead_manager.py  llm.py  main.py  max_client.py  memory.py  nudge.py  observability.py  registration.py  sales.py  scheduler.py  slack.py  telegram_bootstrap.py  telegram_client.py  telegram_poller.py
bot/app/knowledge/: data.yaml  (+2 more)
bot/data/: bot.db
bot/deploy/: Caddyfile  foxinburg-bot.service
bot/tests/: conftest.py  test_admin_contact.py  test_bot.py  test_branch_admin.py  test_broadcast.py  test_client_card.py  test_config_strip.py  test_dialogue_fixes.py  test_group_chat.py  test_homework.py  test_homework_routing_report.py  test_homework_tutor.py  test_lead_robustness.py  test_no_hallucination.py  test_nudge.py  test_quality_fixes.py  test_registration.py  test_reliability.py  test_reliability_main.py  test_team_and_site_sync.py  test_telegram_adapter.py  test_web_chat.py
(+213 files in other folders)
