[project]
name = "foxinburg-max-bot"
version = "0.1.0"
description = "AI-консультант и менеджер по продажам для языковой школы Фоксинбург в мессенджере MAX"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.26,<1.0",
    "pyyaml>=6.0,<7.0",
    "pydantic-settings>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.knowledge"]
